Updates to support Keycloak Authorization and setup for full Keycloak User Management
