# api.yaml
@@ -269,6 +269,12 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/ErrorDetails'
+  #
+  #
+  #
+  #
+  #
+
   '/v1/workspaces/{uuid}':
     get:
       tags:
@@ -381,6 +387,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDetails'
+    post:
+      tags:
+        - Workspace Management
+      summary: Create a new workspace
+      operationId: createWorkspace
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkspaceDto'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseContainerWorkspaceDto'
+        '400':
+          description: Client Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+        '401':
+          description: "Unauthorized"
+        '500':
+          description: Internal error has occurred
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorDetails'
+
 components:
   schemas:
     ErrorDetails:
